--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,4 @@
 [core]
-    remote = gcs
-['remote "gcs"']
-    url = gs://dvc-sample
+    remote = myremote
+['remote "myremote"']
+    url = s3://dvc-public/remote/cml_example
