--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,20 +1,41 @@
 name: train-my-model
-on: [pull_request]
+
+on: [push]
+
 jobs:
   run:
     runs-on: [ubuntu-latest]
-    container: docker://dvcorg/cml-py3:latest
+  
     steps:
       - uses: actions/checkout@v2
-      - name: cml_run
+
+      - uses: iterative/setup-cml@v1
+
+      - uses: iterative/setup-dvc@v1
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: cml
         env:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.tidal-anvil-286409-af037618b56c.json }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           pip install -r requirements.txt
+          
+          # Pull dataset with DVC 
           dvc pull data
-          python train.py
-
-          cat metrics.txt >> report.md
-          cml-publish confusion_matrix.png --md >> report.md
-          cml-send-comment report.md
+          
+          # Reproduce pipeline if any changes detected in dependencies
+          dvc repro 
+          
+          # Use DVC metrics diff to compare metrics to master
+          git fetch --prune --unshallow
+          dvc metrics diff --show-md master >> report.md
+          
+          # Add figure to report
+          dvc plots diff --target loss.csv --show-vega master > vega.json
+          vl2png vega.json -s 1.3 | cml-publish --md >> report.md
+          cml-send-comment report.md 
