--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -33,9 +33,9 @@ jobs:
           
           # Use DVC metrics diff to compare metrics to master
           git fetch --prune --unshallow
-          dvc metrics diff --show-md master >> report.md
+          dvc metrics diff --show-md experiment >> report.md
           
           # Add figure to report
-          dvc plots diff --target loss.csv --show-vega master > vega.json
+          dvc plots diff --target loss.csv --show-vega experiment > vega.json
           vl2png vega.json -s 1.3 | cml-publish --md >> report.md
           cml-send-comment report.md 
